--- a/newyorker.html
+++ b/newyorker.html
@@ -14,18 +14,19 @@
 
 <body>
 <main>
+      <!---NAVIGATION BAR STARTS----->
+          <!--MAKE THIS FIXED-->
     <section class="navigation-bar-section">
-    <!--MAKE THIS FIXED-->
+
     <nav class="navigation-bar">
-        <h1> <a class="h1-link" href="index.html">JEHAN JILLANI</a>
+        <h1> <a id="h1-link" href="index.html">JEHAN JILLANI</a>
         <span>VISUAL EDITOR & PRODUCER</span>
        </h1>
         <!--  -->
-    <!--WORK-->
 
+    <!--WORK-->
         <ul class="work"><a class="work-link" href="#work">WORK</a>
         <div class="work-details">
-          <li class="editing">EDITING</a></li>
           <li class="work-natgeo"><a href="nationalgeographic.html">National Geographic</a></li>
           <!-- <li class="natgeo-south-sudan-archives"><a href="natgeo-south-sudan-archives.html">"“Can Archivists Save the World’s Newest Nation?”</a> -->
           <li class="work-TNY"><a href="newyorker.html">The New Yorker</a></li>
@@ -91,6 +92,18 @@
     "Love In India"</a> </p>
     <p>Photograph by <a target="_blank" href = "http://www.maxpinckers.be/">Max Pincker</a></p>
     <p>Photo Editing & Introduction</p>
+    </div>
+
+    <!--PARIS ATTACKS-->
+    <div class="tny-parisattacks">
+      <div class="paris-holder">
+        <a target="_blank" class="tny-paris-link" href="http://www.newyorker.com/news/news-desk/slide-show-portraits-from-paris-after-the-attack">
+        <img class="tny-parisattacks-img" src='imgs/5-newyorker-paris-2.jpg'>
+        <div id="tny-parisattack-copyright">© Peter Van Agtmael</div>
+      </div>
+        <p><a target="_blank" href = "http://www.newyorker.com/news/news-desk/slide-show-portraits-from-paris-after-the-attack">"The Faces of Paris"</a> </p>
+      <p>Photograph by <a target="_blank" href = "http://www.petervanagtmael.net/">Peter Van Agtmael, Magnum</a></p>
+      <p>Photo Editing</p>
     </div>
 
     <!--SMARTPHONE PHOTOGRAPHY-->
