--- a/about.html
+++ b/about.html
@@ -19,17 +19,13 @@
     <!--MAKE THIS FIXED-->
 
     <nav class="navigation-bar">
-
-    <!--HEAD-->
-
-    <h1> <a class="h1-link" href="index.html">JEHAN JILLANI</a>
+    <h1> <a id="h1-link" href="index.html">JEHAN JILLANI</a>
     <span>VISUAL EDITOR & PRODUCER</span>
     </h1>
 
     <!--WORK-->
         <ul class="work"><a class="work-link" href="#work">WORK</a>
         <div class="work-details">
-          <li class="editing">EDITING</a></li>
           <li class="work-natgeo"><a href="nationalgeographic.html">National Geographic</a></li>
           <li class="work-TNY"><a href="newyorker.html">The New Yorker</a></li>
 
@@ -60,6 +56,11 @@
 
         <div class="about-content">
 
+          <div class="about-photo">
+            <img id="about-photo-jj" src='imgs/jehan-jillani-portrait.jpg'>
+            <p> Photograph by <a target="_blank" href = "http://noralorek.com/">Nora Lorek</a></p>
+          </div>
+
           <p class="about-content-text">
               Jehan Jillani is a visual editor and producer based in Washington D.C.
               She is currently the Associate Photo Editor at National Geographic where she works on photography driven storytelling for the brand’s digital platforms.
@@ -67,15 +68,16 @@
               <br>
               Prior to joining National Geographic, Jehan was the Digital Photo Editor at The New Yorker, where she researched and commissioned images for all facets of newyorker.com.
               She has also worked at TIME and Magnum Foundation.
-              She has been on the jury for PDN’s Storytellers Contest and does portfolio reviews throughout the year.
+              She has been on the jury for PDN’s Storytellers Contest and does portfolio reviews throughout the year. Most recently, she helped curate <a target="_blank" href = "http://www.diversify.photo/">Diversify Photo</a>, a database of photographers of color who are based in the United States.
               <br>
               <br>
               She is a graduate of Smith College and holds a Bachelor of Arts in Studio Art and Government. She was born and raised in Islamabad, Pakistan.
               <br>
               <br>
-              Jehan is especially interested in the intersection of images, politics and digital media and would love to collaborate with photojournalists and artists doing similar work. You can get in touch with her at jehanjjillani@gmail.com
+              Jehan is especially interested in the intersection of imagery, political discourse and digital media and would love to collaborate with photojournalists and artists doing similar work. You can get in touch with her at <a href="mailto:jehanjjillani@gmail.com" target="_blank">jehanjjillani@gmail.com
             </p>
-        </div>
+
+      </div>
 
     </section>
 
