--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JEHAN JILLANI</title>
 
     <!-- Google Font embed -->
@@ -71,10 +72,10 @@
               She has been on the jury for PDN’s Storytellers Contest and does portfolio reviews throughout the year. Most recently, she helped curate <a target="_blank" href = "http://www.diversify.photo/">Diversify Photo</a>, a database of photographers of color who are based in the United States.
               <br>
               <br>
-              She is a graduate of Smith College and holds a Bachelor of Arts in Studio Art and Government. She was born and raised in Islamabad, Pakistan.
+              She is a graduate of Smith College and holds a Bachelor of Arts in Studio Art and Government. Most recently, she completed a Front-End Development course at General Assembly. She was born and raised in Islamabad, Pakistan.
               <br>
               <br>
-              Jehan is especially interested in the intersection of imagery, political discourse and digital media and would love to collaborate with photojournalists and artists doing similar work. You can get in touch with her at <a href="mailto:jehanjjillani@gmail.com" target="_blank">jehanjjillani@gmail.com
+              Jehan is especially interested in the intersection of imagery, technology and journalism and would love to collaborate with anyone doing similar work. You can get in touch with her at <a href="mailto:jehanjjillani@gmail.com" target="_blank">jehanjjillani@gmail.com
             </p>
 
       </div>
