--- a/about.html
+++ b/about.html
@@ -63,20 +63,20 @@
           </div>
 
           <p class="about-content-text">
-              Jehan Jillani is a visual editor and producer based in Washington D.C.
-              She is currently the Associate Photo Editor at National Geographic where she works on photography driven storytelling for the brand’s digital platforms.
-              <br>
-              <br>
-              Prior to joining National Geographic, Jehan was the Digital Photo Editor at The New Yorker, where she researched and commissioned images for all facets of newyorker.com.
-              She has also worked at TIME and Magnum Foundation.
-              She has been on the jury for PDN’s Storytellers Contest and does portfolio reviews throughout the year. Most recently, she helped curate <a target="_blank" href = "http://www.diversify.photo/">Diversify Photo</a>, a database of photographers of color who are based in the United States.
-              <br>
-              <br>
-              She is a graduate of Smith College and holds a Bachelor of Arts in Studio Art and Government. Most recently, she completed a Front-End Development course at General Assembly. She was born and raised in Islamabad, Pakistan.
-              <br>
-              <br>
-              Jehan is especially interested in the intersection of imagery, technology and journalism and would love to collaborate with anyone doing similar work. You can get in touch with her at <a href="mailto:jehanjjillani@gmail.com" target="_blank">jehanjjillani@gmail.com
-            </p>
+            Jehan Jillani is a visual editor and producer based in Washington D.C.
+            She is currently the Associate Photo Editor at National Geographic where she works on photography driven storytelling for the brand’s digital platforms.
+            <br>
+            <br>
+            Prior to joining National Geographic, Jehan was the Digital Photo Editor at The New Yorker, where she researched and commissioned images for all facets of newyorker.com.
+            She has also worked at TIME and Magnum Foundation.
+            She has been on the jury for PDN’s Storytellers Contest and does portfolio reviews throughout the year. Most recently, she helped curate <a target="_blank" href = "http://www.diversify.photo/">Diversify Photo</a>, a database of photographers of color who are based in the United States.
+            <br>
+            <br>
+            She is a graduate of Smith College and holds a Bachelor of Arts in Studio Art and Government. She also holds a certificate in Front-End Development from General Assembly. She was born and raised in Islamabad, Pakistan. 
+            <br>
+            <br>
+            Jehan is especially interested in the intersection of imagery, technology and journalism and would love to collaborate with people doing similar work. You can get in touch with her at <a href="mailto:jehanjjillani@gmail.com" target="_blank">jehanjjillani@gmail.com
+          </p>
 
       </div>
 
