--- a/nationalgeographic.html
+++ b/nationalgeographic.html
@@ -70,7 +70,7 @@
         <p><a target="_blank" href = "https://www.nationalgeographic.com/photography/proof/2017/08/rohingya-refugees-myanmar-bangladesh/">
         "Without a Home, And Without Hope" </a> </p>
         <p>Photographs by <a target="_blank" href = "https://www.williamdaniels.net/">William Daniels</a>, <a href="https://www.panos.co.uk/">Panos</a></p>
-        <p>Commissioned Assignment, Photo Editing & Layout Design</p>
+        <p>Involvement: Commissioned Assignment, Photo Editing & Layout Design</p>
     </div>
 
     <!--SOUTH-SUDAN-ARCHIVE-->
@@ -84,7 +84,7 @@
         <p><a target="_blank" href = "http://news.nationalgeographic.com/2016/11/south-sudan-archives">
         "Can Archivists Save the World's Newest Nation?" </a> </p>
         <p>Photographs by <a target="_blank" href = "http://dominicnahr.com/">Dominic Nahr</a>, <a href="http://www.contactpressimages.com/">Contact Press Images</a></p>
-        <p>Commissioned Assignment, Feature Production & Layout Design</p>
+        <p>Involvement: Commissioned Assignment, Feature Production, Photo Editing & Layout Design</p>
     </div>
 
     <!--SOUTH-SUDAN-NAHR-QA-->
@@ -99,7 +99,7 @@
       "A Photographer's Portrait of the World's Youngest Country"
       </a></p>
       <p>Photographs by <a href = "http://dominicnahr.com/">Dominic Nahr</a>, <a href="http://www.contactpressimages.com/">Contact Press Images</a></p>
-      <p>Photo Editing, Layout Design & Writing</p>
+      <p>Involvement: Photo Editing, Layout Design & Writing</p>
     </div>
 
     <!--FELIPE-DANA-MOSUL-->
@@ -127,7 +127,7 @@
     “Five Years Later, a Photographer Revisits the Arab Spring."
     </a>
     <p>Photographs by <a target="_blank" href= "http://pro.magnumphotos.com/C.aspx?VP3=CMS3&VF=MAGO31_10_VForm&ERID=24KL535GR6">Moises Saman, Magnum</a></p>
-    <p>Photo Editing, Layout Design & Writing </p>
+    <p>Involvement: Photo Editing, Layout Design & Writing </p>
     </div>
 
     <!--ZIKA-->
@@ -140,7 +140,7 @@
       "Where Women With Zika Fear Prison"
       </a>
       <p>Photographs by <a target="_blank" href= "http://www.nadiashiracohen.com/">Nadia Shira Cohen</a></p>
-      <p>Photo Editing & Layout Design </p>
+      <p>Involvement: Photo Editing & Layout Design </p>
     </div>
 
 
@@ -152,7 +152,7 @@
       <div id="natgeo-dubai-copyright">© Luca Locatelli, INSTITUTE</div>
       <p><a target="_blank" href ="http://www.nationalgeographic.com/environment/urban-expeditions/green-buildings/dubai-ecological-footprint-sustainable-urban-city/">"The World's Most Improbable Green City"</a>
       <p>Photographs by <a target="_blank" href= "https://www.lucalocatelli.com/">Luca Locatelli</a>, <a href="http://www.instituteartist.com/">INSTITUTE</a></p>
-      <p>Commissioned Assignment, Feature Production & Layout Design</p>
+      <p>Involvement: Commissioned Assignment, Feature Production, Photo Editing & Layout Design</p>
     </div>
 
     <!--AUSTIN-->
@@ -163,7 +163,7 @@
       <div id="natgeo-austin-copyright">© Benjamin Rasmussen</div>
       <p><a target="_blank" href ="http://www.nationalgeographic.com/environment/urban-expeditions/austin/sustainable-innovative-food-growth-feeds-cities/">"The New Urban Farmers"</a>
       <p>Photographs by <a target="_blank" href= "https://benjaminramussenphoto.com/">Benjamin Rasmussen</a></p>
-      <p>Commissioned Assignment, Feature Production & Layout Design</p>
+      <p>Involvement: Commissioned Assignment, Feature Production, Photo Editing & Layout Design</p>
     </div>
   </div>
     </section>
