--- a/newyorker.html
+++ b/newyorker.html
@@ -70,7 +70,7 @@
     <p><a target="_blank" href = "http://www.newyorker.com/culture/photo-booth/pope-francis-new-york-tour-in-photos">
     "The Pope’s New York Tour in Photos" </a> </p>
     <p>Photograph by <a target="_blank" href = "http://jonnorattman.com/">Jonno Rattman</a></p>
-    <p>Commissioned Assignment & Photo Editing</p>
+    <p>Involvement: Commissioned Assignment & Photo Editing</p>
     </div>
 
     <!--SCOTTISH BORDER-->
@@ -81,7 +81,7 @@
     <p><a target="_blank" href = "http://www.newyorker.com/culture/photo-booth/rob-stothard-scottish-border">
     "Rob Stothard at The Scottish Border"</a> </p>
     <p>Photograph by <a target="_blank" href = "https://robstothard.com/">Rob Stothard</a></p>
-    <p>Photo Editing & Introduction</p>
+    <p>Involvement: Photo Editing & Introduction</p>
     </div>
 
     <!--LOVE IN INDIA-->
@@ -92,7 +92,7 @@
     <p><a target="_blank" href = "http://www.newyorker.com/culture/photo-booth/love-india">
     "Love In India"</a> </p>
     <p>Photograph by <a target="_blank" href = "http://www.maxpinckers.be/">Max Pincker</a></p>
-    <p>Photo Editing & Introduction</p>
+    <p>Involvement: Photo Editing & Introduction</p>
     </div>
 
     <!--PARIS ATTACKS-->
@@ -104,7 +104,7 @@
       </div>
         <p><a target="_blank" href = "http://www.newyorker.com/news/news-desk/slide-show-portraits-from-paris-after-the-attack">"The Faces of Paris"</a> </p>
       <p>Photograph by <a target="_blank" href = "http://www.petervanagtmael.net/">Peter Van Agtmael, Magnum</a></p>
-      <p>Photo Editing</p>
+      <p>Involvement: Photo Editing</p>
     </div>
 
     <!--SMARTPHONE PHOTOGRAPHY-->
@@ -115,7 +115,7 @@
     <p><a target="_blank" href = "http://www.newyorker.com/culture/photo-booth/redefining-smart-phone-photography">
     "Redefining Smartphone Photography"</a> </p>
     <p>Photograph by <a target="_blank" href = "http://www.lauraeltantawy.com/">Laura El-Tantawy</a></p>
-    <p>Writing</p>
+    <p>Involvement: Writing & Photo Editing</p>
     </div>
 
     <!--DRC ARCHIVE-->
@@ -128,7 +128,7 @@
     <p><a target="_blank" href = "http://www.newyorker.com/culture/photo-booth/sarah-stackes-d-r-c-archive-project">
     "Sarah Stacke’s D.R.C. Archive Project"</a> </p>
     <p>Photographer Unknown/Courtesy <a target="_blank" href = "http://sarahstacke.com/">Sarah Stacke</a></p>
-    <p>Writing</p>
+    <p>Involvement: Writing</p>
     </div>
 
   </div>
