--- a/index.html
+++ b/index.html
@@ -74,10 +74,12 @@
             She has been on the jury for PDN’s Storytellers Contest and does portfolio reviews throughout the year. Most recently, she helped curate <a target="_blank" href = "http://www.diversify.photo/">Diversify Photo</a>, a database of photographers of color who are based in the United States.
             <br>
             <br>
-            She is a graduate of Smith College and holds a Bachelor of Arts in Studio Art and Government. Most recently, she completed a Front-End Development course at General Assembly. She was born and raised in Islamabad, Pakistan.
+            She is a graduate of Smith College and holds a Bachelor of Arts in Studio Art and Government. She also holds a certificate in Front-End Development from General Assembly. She was born and raised in Islamabad, Pakistan. 
             <br>
             <br>
-            Jehan is especially interested in the intersection of imagery, technology and journalism and would love to collaborate with anyone doing similar work. You can get in touch with her at <a href="mailto:jehanjjillani@gmail.com" target="_blank">jehanjjillani@gmail.com
+            Jehan is especially interested in the intersection of imagery, technology and journalism and would love to collaborate with people doing similar work. You can get in touch with her at <a href="mailto:jehanjjillani@gmail.com" target="_blank">jehanjjillani@gmail.com
+            <br>
+            <br>
           </p>
 
     </div>
