--- a/nationalgeographic.html
+++ b/nationalgeographic.html
@@ -2,6 +2,16 @@
 
 <html>
   <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111695943-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-111695943-1');
+    </script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JEHAN JILLANI</title>
 
@@ -46,7 +56,6 @@
       <li class="facebook"><a target="_blank" href="https://www.facebook.com/jehan.jillani">FACEBOOK</a></li>
       <li class="twitter"><a target="_blank" href="https://twitter.com/jehanjillani">TWITTER</a></li>
       <li class="instagram"><a target="_blank" href="https://www.instagram.com/jehanjillani/">INSTAGRAM</a></li>
-      <li class="tumblr"><a target="_blank" href="https://differentthingsdifferentdays.tumblr.com/">TUMBLR</a></li>
       <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/in/jehanjillani/">LINKEDIN</a></li>
     </ul>
     </nav>
