--- a/newyorker.html
+++ b/newyorker.html
@@ -76,7 +76,7 @@
     <div class="tny-pope">
     <a target="_blank" class="tny-popeinnyc-link" href="http://www.newyorker.com/culture/photo-booth/pope-francis-new-york-tour-in-photos">
     <img class="tny-popeinnyc-img" src='imgs/1-newyorker-popenyc-1.jpg'>
-    <div id="tny-pope-copyright">© Jonno Rattman</div>
+    <!--<div id="tny-pope-copyright">© Jonno Rattman</div>-->
     <p><a target="_blank" href = "http://www.newyorker.com/culture/photo-booth/pope-francis-new-york-tour-in-photos">
     "The Pope’s New York Tour in Photos" </a> </p>
     <p>Photograph by <a target="_blank" href = "http://jonnorattman.com/">Jonno Rattman</a></p>
@@ -87,7 +87,7 @@
     <div class="tny-scottishborder">
     <a target="_blank" class="tny-scottishborder-link" href="http://www.newyorker.com/culture/photo-booth/rob-stothard-scottish-border">
     <img class="tny-scottishborder-img" src='imgs/2-newyorker-scottishborder-1.jpg'>
-    <div id="tny-scottishborder-copyright">© Rob Stothard</div>
+    <!--<div id="tny-scottishborder-copyright">© Rob Stothard</div>-->
     <p><a target="_blank" href = "http://www.newyorker.com/culture/photo-booth/rob-stothard-scottish-border">
     "Rob Stothard at The Scottish Border"</a> </p>
     <p>Photograph by <a target="_blank" href = "https://robstothard.com/">Rob Stothard</a></p>
@@ -98,7 +98,7 @@
     <div class="tny-loveinindia">
     <a target="_blank" class="tny-loveinindia-link" href="http://www.newyorker.com/culture/photo-booth/love-india">
     <img class="tny-loveinindia-img" src='imgs/3-newyorker-loveinindia-1.jpg'>
-    <div id="tny-loveinindia-copyright">© Max Pinckers</div>
+    <!--<div id="tny-loveinindia-copyright">© Max Pinckers</div>-->
     <p><a target="_blank" href = "http://www.newyorker.com/culture/photo-booth/love-india">
     "Love In India"</a> </p>
     <p>Photograph by <a target="_blank" href = "http://www.maxpinckers.be/">Max Pincker</a></p>
@@ -109,7 +109,7 @@
     <div class="tny-parisattacks">
       <div class="paris-holder">
         <a target="_blank" class="tny-paris-link" href="http://www.newyorker.com/news/news-desk/slide-show-portraits-from-paris-after-the-attack">
-        <img class="tny-parisattacks-img" src='imgs/5-newyorker-paris-2.jpg'>
+        <!--<img class="tny-parisattacks-img" src='imgs/5-newyorker-paris-2.jpg'>-->
         <div id="tny-parisattack-copyright">© Peter Van Agtmael</div>
       </div>
         <p><a target="_blank" href = "http://www.newyorker.com/news/news-desk/slide-show-portraits-from-paris-after-the-attack">"The Faces of Paris"</a> </p>
@@ -121,7 +121,7 @@
     <div class="tny-smartphone-photography">
     <a target="_blank" class="tny-smartphone-link" href="http://www.newyorker.com/culture/photo-booth/redefining-smart-phone-photography">
     <img class="tny-smartphone-img" src='imgs/6-newyorker-smartphone-photography-2.jpg'>
-    <div id="tny-smartphone-copyright">© Laura El-Tantawy</div>
+    <!--<div id="tny-smartphone-copyright">© Laura El-Tantawy</div>-->
     <p><a target="_blank" href = "http://www.newyorker.com/culture/photo-booth/redefining-smart-phone-photography">
     "Redefining Smartphone Photography"</a> </p>
     <p>Photograph by <a target="_blank" href = "http://www.lauraeltantawy.com/">Laura El-Tantawy</a></p>
@@ -134,7 +134,7 @@
     <div class="img-wrapper">
     <img class="tny-drc-archive-img" src='imgs/7-newyorker-drcarchive-1.jpg'>
     </div>
-    <div id="tny-drcarchive-copyright">Photographer Unknown</div>
+    <!--<div id="tny-drcarchive-copyright">Photographer Unknown</div>-->
     <p><a target="_blank" href = "http://www.newyorker.com/culture/photo-booth/sarah-stackes-d-r-c-archive-project">
     "Sarah Stacke’s D.R.C. Archive Project"</a> </p>
     <p>Photographer Unknown/Courtesy <a target="_blank" href = "http://sarahstacke.com/">Sarah Stacke</a></p>
