--- a/newyorker.html
+++ b/newyorker.html
@@ -109,8 +109,8 @@
     <div class="tny-parisattacks">
       <div class="paris-holder">
         <a target="_blank" class="tny-paris-link" href="http://www.newyorker.com/news/news-desk/slide-show-portraits-from-paris-after-the-attack">
-        <!--<img class="tny-parisattacks-img" src='imgs/5-newyorker-paris-2.jpg'>-->
-        <div id="tny-parisattack-copyright">© Peter Van Agtmael</div>
+        <img class="tny-parisattacks-img" src='imgs/5-newyorker-paris-2.jpg'>
+        <!--<div id="tny-parisattack-copyright">© Peter Van Agtmael</div>-->
       </div>
         <p><a target="_blank" href = "http://www.newyorker.com/news/news-desk/slide-show-portraits-from-paris-after-the-attack">"The Faces of Paris"</a> </p>
       <p>Photograph by <a target="_blank" href = "http://www.petervanagtmael.net/">Peter Van Agtmael, Magnum</a></p>
