grant cornett added + updated bio

--- a/nationalgeographic.html
+++ b/nationalgeographic.html
@@ -187,6 +187,17 @@
       <p>Photographs by <a target="_blank" href= "https://benjaminramussenphoto.com/">Benjamin Rasmussen</a></p>
       <p>Involvement: Commissioned Assignment, Feature Production, Photo Editing & Layout Design</p>
     </div>
+
+    <!--FUTURE OF FOOD-->
+    <div class="natgeo-future-food">
+      <a target="_blank" class="natgeo-futurefood-link" href="https://www.nationalgeographic.com/environment/future-of-food/future-of-food-agriculture-ecology/">
+      <img class="natgeo-futurefood-img" src='imgs/11-natgeo-grant-cornett.jpg'>
+      </a>
+      <!--<div id="natgeo-austin-copyright">© Grant Cornett</div>-->
+      <p><a target="_blank" href ="https://www.nationalgeographic.com/environment/future-of-food/future-of-food-agriculture-ecology/">"Menu of the Future"</a>
+      <p>Photographs by <a target="_blank" href= "http://grantcornett.com/html/">Grant Cornett</a></p>
+      <p>Involvement: Commissioned Assignment, Production, Photo Editing & Layout Design</p>
+    </div>
   </div>
     </section>
 
